--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,5 @@
-{ "homepage":"http://Saurabh2636.github.io/Ebook",
+{
+  "homepage": "http://Saurabh2636.github.io/Ebook",
   "name": "server",
   "version": "1.0.0",
   "description": "",
